--- a/Django/myproject/VocabularyNote/templates/CalBSA.html
+++ b/Django/myproject/VocabularyNote/templates/CalBSA.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>行為序列分析</title>
+        <title>I come from template!!</title>
         <style>
             body {
                background-color: lightyellow;
@@ -14,10 +14,8 @@
         </style>
     </head>
     <body>
-        <h1>行為序列分析</h1>
-        <em>{{ current_time }}</em><br>
-        <a href="../BSA_SQLData">看資料</a> | 
-        <a href="../BSA_BList">看行為佇列</a> | 
+        <h1>Hello World!</h1>
+        <em>{{ current_time }}</em>
         <a href="../BSA_Sample" download="sample.csv">Download Sample</a>
         <br>
         <form action="#" method="post">{% csrf_token %}
