--- a/Django/myproject/template/templates/YoutubeDownload.html
+++ b/Django/myproject/template/templates/YoutubeDownload.html
@@ -35,7 +35,7 @@
         
         
         {% for link in SourceUrl %}
-            <a href="{{ link.url }}" download="filename.mp4">{{ link.info }}</a><br>
+            <li><a href="{{ link.url }}" download="filemane.mp4">{{ link.info }}</a></li>
 
         {% endfor %}
     </body>
