process static file

--- a/Django/myproject/BSA/templates/CalBSA.html
+++ b/Django/myproject/BSA/templates/CalBSA.html
@@ -14,6 +14,10 @@
         </style>
     </head>
     <body>
+        <!--
+        {% load staticfiles %}
+        <img src="{% static 'images/1.jpg' %}"" alt="img">
+        -->
         <h1>行為序列分析</h1>
         <em>{{ current_time }}</em><br>
         <a href="../BSA_SQLData">看資料</a> | 
