--- a/Django/myproject/BSA/templates/CalBSA.html
+++ b/Django/myproject/BSA/templates/CalBSA.html
@@ -22,6 +22,7 @@
         <em>{{ current_time }}</em><br>
         <a href="../BSA_SQLData">看資料</a> | 
         <a href="../BSA_BList">看行為佇列</a> | 
+        <a href="../BSA_BArray">看行為序列矩陣</a> |
         <a href="../BSA_Sample" download="sample.csv">Download Sample</a>
         <br>
         <form action="#" method="post">{% csrf_token %}
