--- a/Django/myproject/BSA/templates/CalBSA.html
+++ b/Django/myproject/BSA/templates/CalBSA.html
@@ -54,7 +54,7 @@
         指定組別(-1為不指定)：<input type="text" id="Group" name="Group" value="{{ Group }}"></input>
         ＡＰＩ選擇：<input type="text" id="API_Select" name="API_Select" value="BArray"></input>
         <input id='enter' type="button" value="計算行為序列"></input>
-        <textarea id="array_BSA" rows="10" cols="100" >{{ array_BSA }}</textarea>
-        
+        <textarea id="array_BSA" rows="10" cols="100" >{{ array_BSA }}</textarea><br>
+
     </body>
 </html>
