--- a/Django/myproject/BSA/templates/CalBSA.html
+++ b/Django/myproject/BSA/templates/CalBSA.html
@@ -22,7 +22,7 @@
                 {
                     num:$("#NumOfBS").val(),
                     group:$("#Group").val(),
-                    ApiType:$("#API_Select").val(),
+                    ApiType:$("input[name=api]:checked").val(),
                     source:"input-csv",
                     con:$("#content").val(),
 
@@ -48,13 +48,17 @@
         <a href="../BSA_BArray">看行為序列矩陣</a> |
         <a href="../BSA_Sample" download="sample.csv">Download Sample</a>
         <br>
-        
-        <textarea rows="10" cols="100" id="content" name="content">{{ csv_data }}</textarea>
+        <textarea rows="10" cols="100" id="content" name="content">{{ csv_data }}</textarea><br>
         行為種類數量為：<input type="text" id="NumOfBS" name="NumOfBS" value="{{ NumOfBS }}"></input>
         指定組別(-1為不指定)：<input type="text" id="Group" name="Group" value="{{ Group }}"></input>
-        ＡＰＩ選擇：<input type="text" id="API_Select" name="API_Select" value="BArray"></input>
-        <input id='enter' type="button" value="計算行為序列"></input>
-        <textarea id="array_BSA" rows="10" cols="100" >{{ array_BSA }}</textarea><br>
+        ＡＰＩ選擇：<!--<input type="text" id="API_Select" name="API_Select" value="BArray"></input>-->
+        <input type="radio" name='api' value="BArray"> BArray
+        <input type="radio" name='api' value="ZScore"> ZScore
 
+        <input id='enter' type="button" value="計算行為序列"></input>
+        <form action="./draw/" method="post">{% csrf_token %}            
+            <textarea id="array_BSA" name='JsonString' rows="10" cols="100" >{{ array_BSA }}</textarea><br>
+            <input type="submit" value="ZScore轉圖">
+        </form> 
     </body>
 </html>
