--- a/Django/myproject/BSA/templates/drawZScore.html
+++ b/Django/myproject/BSA/templates/drawZScore.html
@@ -15,17 +15,44 @@
 
             var c = document.getElementById("myCanvas");
             var ctx = c.getContext("2d");
-
-            
-
             Draw_basic(ctx);
-            Draw_6_6(ctx);
-            Draw_1_6(ctx);
-            Draw_2_6(ctx);
-            Draw_3_6(ctx);
-            Draw_4_6(ctx);
-            Draw_5_6(ctx);
-            Draw_2_3(ctx);
+            if({{ 1_1 }}){Draw_1_1(ctx);}
+            if({{ 1_2 }}){Draw_1_2(ctx);}
+            if({{ 1_3 }}){Draw_1_3(ctx);}
+            if({{ 1_4 }}){Draw_1_4(ctx);}
+            if({{ 1_5 }}){Draw_1_5(ctx);}
+            if({{ 1_6 }}){Draw_1_6(ctx);}
+            if({{ 2_1 }}){Draw_2_1(ctx);}
+            if({{ 2_2 }}){Draw_2_2(ctx);}
+            if({{ 2_3 }}){Draw_2_3(ctx);}
+            if({{ 2_4 }}){Draw_2_4(ctx);}
+            if({{ 2_5 }}){Draw_2_5(ctx);}
+            if({{ 2_6 }}){Draw_2_6(ctx);}
+            if({{ 3_1 }}){Draw_3_1(ctx);}
+            if({{ 3_2 }}){Draw_3_2(ctx);}
+            if({{ 3_3 }}){Draw_3_3(ctx);}
+            if({{ 3_4 }}){Draw_3_4(ctx);}
+            if({{ 3_5 }}){Draw_3_5(ctx);}
+            if({{ 3_6 }}){Draw_3_6(ctx);}
+            if({{ 4_1 }}){Draw_4_1(ctx);}
+            if({{ 4_2 }}){Draw_4_2(ctx);}
+            if({{ 4_3 }}){Draw_4_3(ctx);}
+            if({{ 4_4 }}){Draw_4_4(ctx);}
+            if({{ 4_5 }}){Draw_4_4(ctx);}
+            if({{ 4_6 }}){Draw_4_6(ctx);}
+            if({{ 5_1 }}){Draw_5_1(ctx);}
+            if({{ 5_2 }}){Draw_5_2(ctx);}
+            if({{ 5_3 }}){Draw_5_3(ctx);}
+            if({{ 5_4 }}){Draw_5_4(ctx);}
+            if({{ 5_5 }}){Draw_5_5(ctx);}
+            if({{ 5_6 }}){Draw_5_6(ctx);}
+            if({{ 6_1 }}){Draw_6_1(ctx);}
+            if({{ 6_2 }}){Draw_6_2(ctx);}
+            if({{ 6_3 }}){Draw_6_3(ctx);}
+            if({{ 6_4 }}){Draw_6_4(ctx);}
+            if({{ 6_5 }}){Draw_6_5(ctx);}
+            if({{ 6_6 }}){Draw_6_6(ctx);}
+            
             function Draw_basic(ctx) {
                 //正方形1
                 var initialpoint_x =120;
